2010-11-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to 	Christian Mueller)
	* Fixed issue: #16341: Get rid of the full plugin name
	* Fixed issue: #16211: a hsc too much 

2010-11-08  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16243: no context menu for xml files and html files with xml declaration to start mapping process (Thanks to Andreas Kiessling)

2010-11-06  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16212: templavoila floods deprecation log on current TYPO3 trunk (4.5) (Thanks to Andreas Kiessling)

2010-10-29  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #3450: Web->Page (TV) shows "fieldname" instead of "title" - </br> was supposed to be <br />

2010-10-23  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #16115: content-cells might be very slim
	* Updated manual related to #8051: oldStyleColumnNumber of FCE overrides colPos of Page Template
	* Fixed bug: #16083: Fatal error: mod2/index.php 

2010-10-19  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16070: Sitemap Section Index + TV => Internal Server Error 500, PHP Fatal error
	* Follow-up to: #15924: nested_fields register content is not correct - duplicate code removed
	* Fixed issue: #15924: nested_fields register content is not correct  (Thanks to Frederik Rei)
	* Fixed issue: #15896: Infection Warning by Avira AntiVir: HTML/Crypted.Gen

2010-10-17  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15986: TYPO3_MODE check in localconf.php might break spriteCache 

2010-10-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #15980: doktype of page is not respected during localizing of a page (Thanks to Andreas Kiessling)

2010-10-12  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Generally updated several outdated parts of the manual
	* Fixed issue: #15957: TV does not honour TCAdefaults from PageTSconfig or UserTSconfig 
